# ferov

./: .gitignore  Development Flow.md  README.md  full system flow.txt  skeleton for all repositories.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci_agent.yml  ci_backend.yml  ci_fastapi.yml  ci_mobile.yml
backend-fastapi/: .env.example  README.md  pyproject.toml  requirements.txt
backend-fastapi/app/: __init__.py  api.py  api_controller.py  config.py  main.py  state.py
backend-fastapi/data/: device_registry.db
backend-fastapi/scripts/: run_workers.sh  sync_jwks.sh
backend-fastapi/services/: README.md
backend-fastapi/tests/: conftest.py  test_auth.py  test_command_dispatch.py  test_laravel_bridge_auth.py  test_security_pillars.py  test_telemetry.py  test_update_flow.py
backend-laravel/: .env.example  composer.json  phpunit.xml
backend-laravel/bootstrap/: app.php
backend-laravel/config/: audit.php  jwt.php  policy.php  security.php  services.php
backend-laravel/docker/: Dockerfile  nginx.conf
backend-laravel/modules/: README.md
backend-laravel/routes/: api.php  console.php  web.php  webhooks.php
docs/architecture/: CI-CD Architecture.md  Cross-Component Behavior Contracts.md  DR & Business Continuity Plan.md  Event Bus Architecture.md  Infrastructure Architecture.md  OTA Pipeline.md  Observability.md  Performance Requirements.md  key_management.md  overview.md  sequence_flows.md  system_diagrams.md  threat_model.md  trust_model.md
docs/integration/: Mobile App Integration Guide.md
docs/onboarding/: coding_standards.md  contribution_guide.md  setup_env.md
docs/operations/: Agent Failure Modes.md  Agent Local Logging.md  Agent Self-Recovery Behavior.md  Alerting & Notification Routing.md  Compliance Dashboard.md  KernelService Deployment Strategy.md  OTA Publisher Service.md  Quarantine Behavior.md  WindowsAgent Update Handling.md
docs/policy/: Policy Authoring Guide.md  Policy Management Portal.md
docs/protocols/: api_endpoints.md  command_envelope_spec.md  ioctl_protocol.md  ws_protocol.md
docs/report/: 01-introduction.md  02-architecture.md  03-security_model.md  04-implementation.md  05-results_and_future_work.md
docs/security/: Certificate Lifecycle.md  Key Revocation Behavior.md  Message Signing & Canonicalization.md  Rate-Limit Strategy.md  Security Engineering Checklist.md  audit_chain.md  compliance_rules.md  revocation_flow.md
docs/specs/: FastAPI ↔ Laravel (REST + Webhook Control Channel).json  Full System Json.json  Laravel ↔ Mobile App (REST + notifications).json  MasterBlueprint-v3.json  Missing System Components.json  System flow.json  WindowsAgent ↔ FastAPI (WSS control channel).json  WindowsAgent ↔ KernelService Interface.json
docs/testing/: Testing & QA Strategy.md
infrastructure/: README.md  docker-compose.yml
infrastructure/k8s/: fastapi-deployment.yaml  ingress.yaml  laravel-deployment.yaml  mysql.yaml
infrastructure/terraform/: ecs_or_gke.tf  kms.tf  main.tf  (+2 more)
kernel-service/: CMakeLists.txt  README.md  README.modules.md
kernel-service/attestation/: README.md
kernel-service/driver/: README.md
kernel-service/integrity-checks/: README.md
kernel-service/rollback/: README.md
kernel-service/scripts/: build_driver.ps1  build_service.ps1
kernel-service/service/: dispatcher.cpp  dispatcher.hpp  main.cpp
kernel-service/service/crypto/: ed25519_verify.c  ed25519_verify.h  ed25519_verify_wrapper.cpp  ed25519_verify_wrapper.hpp  ed25519_wrapper.cpp  ed25519_wrapper.hpp  json_canonicalizer.c
kernel-service/service/opcodes/: attestation.cpp  attestation.hpp  collect_system_info.cpp  collect_system_info.hpp  commit_update.cpp  commit_update.hpp  lock_screen.cpp  lock_screen.hpp  logout.cpp  logout.hpp  ping.cpp  ping.hpp  process_list.cpp  process_list.hpp  reboot.cpp  reboot.hpp  rollback_update.cpp  rollback_update.hpp  self_repair.cpp  shutdown.cpp  shutdown.hpp  stage_update.cpp  stage_update.hpp  tamper_check.cpp  tamper_check.hpp  validate_update_package.cpp  validate_update_package.hpp
kernel-service/service/utils/: dpapi_loader.cpp  dpapi_loader.hpp  json_canonicalizer.cpp  json_canonicalizer.hpp  logger.cpp  logger.hpp
kernel-service/service/validation/: schema_validator.cpp  schema_validator.hpp
kernel-service/tests/: test_opcodes.cpp  test_security.cpp
mira/: pubspec.yaml
mobile-app/: .flutter-plugins-dependencies  pubspec.yaml
scripts/: README.md  ci_instructions.md  generate_ed25519_keys.py  print_ci_secret_commands.py
windows-agent/: CMakeLists.txt  README.md  README.modules.md
windows-agent/include/: agent_version.hpp
windows-agent/scripts/: install_service.ps1  package_agent.ps1  uninstall_service.ps1
windows-agent/src/: agent_state.hpp  main.cpp
windows-agent/src/comm/: communicator.hpp
windows-agent/src/command/: dispatcher.hpp
windows-agent/src/config/: config.hpp  config_manager.hpp
windows-agent/src/crypto/: ed25519_sign.cpp  ed25519_sign.hpp  json_canonicalizer.cpp  json_canonicalizer.hpp
windows-agent/src/kernel/: ioctl_client.cpp  ioctl_client.hpp  kernel_schema.hpp
windows-agent/src/logging/: logger.hpp
windows-agent/src/ota/: ota_manager.hpp
windows-agent/src/policy/: policy_bundle_cache.cpp
windows-agent/src/quarantine/: quarantine_manager.hpp
windows-agent/src/recovery/: recovery_manager.hpp
windows-agent/src/storage/: sqlite_queue.cpp  sqlite_queue.hpp
windows-agent/src/telemetry/: telemetry_collector.cpp  telemetry_collector.hpp
windows-agent/src/utils/: base64.cpp  dpapi_loader.cpp  dpapi_loader.hpp  json_canonicalizer.cpp  json_canonicalizer.hpp  logger.cpp  sha256.cpp  sha256.hpp
windows-agent/src/ws/: sequence_manager.cpp  sequence_manager.hpp  ws_client.cpp  ws_client.hpp  ws_protocol.cpp  ws_protocol.hpp
windows-agent/src/ws/handlers/: auth_handler.cpp  command_handler.cpp  error_handler.cpp  telemetry_handler.cpp
windows-agent/tests/: test_ioctl.cpp  test_signature.cpp  test_ws.cpp
windows-agent/tests/integration/: ioctl_pipe_test.cpp  ioctl_signed_test.cpp
windows-agent/tests/unit/: ws_protocol_signing_test.cpp
(+180 files in other folders)
